--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-            <a class="navbar-brand" href="#">Chanukya</a>
+            <a class="navbar-brand" href="https://chanukyamoorthy.github.io">Chanukya</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 
