--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <link rel='shortcut icon' href='favicon.png' type='image/x-icon' />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         
+        <!-- Linking CSS -->
+        <link rel="stylesheet" type="text/css" href="theme.css">
+
         <!-- Webpage Name -->
         <title>Chanukya</title>
   
